--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,8 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  min-width: 100px;
+  max-width: 100px;
 }
 button:hover {
   border-color: #646cff;
