--- a/src/index.css
+++ b/src/index.css
@@ -45,8 +45,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-  min-width: 100px;
-  max-width: 100px;
+  text-transform: capitalize;
 }
 button:hover {
   border-color: #646cff;
